fix: remove overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -39,7 +39,6 @@ html, body {
 }
 
 body {
-    overflow: hidden;
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
 
